@@ -173,7 +173,7 @@ void MenuManager::renderIcon(int x, int y) {
 	}
 }
 
-void MenuManager::setDragIcon(int icon_id) {
+void MenuManager::setDragIcon(int icon_id, int overlay_id) {
 	if (!icons) return;
 
 	if (!drag_icon) {
@@ -185,6 +185,11 @@ void MenuManager::setDragIcon(int icon_id) {
 
 		icons->setIcon(icon_id, Point());
 		icons->renderToImage(drag_icon->getGraphics());
+
+		if (overlay_id != -1) {
+			icons->setIcon(overlay_id, Point());
+			icons->renderToImage(drag_icon->getGraphics());
+		}
 	}
 }
 
@@ -192,7 +197,7 @@ void MenuManager::setDragIconItem(ItemStack stack) {
 	if (!drag_icon) {
 		if (stack.empty()) return;
 
-		setDragIcon(items->items[stack.item].icon);
+		setDragIcon(items->items[stack.item].icon, items->getItemIconOverlay(stack.item));
 
 		if (!drag_icon) return;
 
@@ -1246,7 +1251,7 @@ void MenuManager::render() {
 		if (drag_src == DRAG_SRC_INVENTORY || drag_src == DRAG_SRC_VENDOR || drag_src == DRAG_SRC_STASH)
 			setDragIconItem(drag_stack);
 		else if (drag_src == DRAG_SRC_POWERS || drag_src == DRAG_SRC_ACTIONBAR)
-			setDragIcon(powers->powers[drag_power].icon);
+			setDragIcon(powers->powers[drag_power].icon, -1);
 
 		if (settings->touchscreen && sticky_dragging)
 			renderIcon(keydrag_pos.x - eset->resolutions.icon_size/2, keydrag_pos.y - eset->resolutions.icon_size/2);
@@ -1257,7 +1262,7 @@ void MenuManager::render() {
 		if (drag_src == DRAG_SRC_INVENTORY || drag_src == DRAG_SRC_VENDOR || drag_src == DRAG_SRC_STASH)
 			setDragIconItem(drag_stack);
 		else if (drag_src == DRAG_SRC_POWERS || drag_src == DRAG_SRC_ACTIONBAR)
-			setDragIcon(powers->powers[drag_power].icon);
+			setDragIcon(powers->powers[drag_power].icon, -1);
 
 		renderIcon(keydrag_pos.x - eset->resolutions.icon_size/2, keydrag_pos.y - eset->resolutions.icon_size/2);
 	}
